# webpilot-automation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  pyproject.toml
examples/: ai_agent_example.py  basic_usage.py  platform_adapter_example.py
src/webpilot/: __init__.py  ai_agent.py  anti_detect.py  browser.py  cdp_client.py  element.py  exceptions.py  page.py  recorder.py
src/webpilot/adapters/: __init__.py  bilibili.py  douyin.py  wechat.py  xiaohongshu.py
tests/: test_anti_detect.py  test_exceptions.py  test_recorder.py
